# ankicard

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/ankicard/: cli.py
src/ankicard/anki/: card_builder.py  models.py  reader.py
src/ankicard/config/: cache.py  settings.py
src/ankicard/core/: __init__.py  audio.py  furigana.py  image.py  transcription.py  translation.py
src/ankicard/media/: bundler.py  manager.py
template/: template.txt
tests/: __init__.py  conftest.py  test_audio.py  test_bundler.py  test_cache.py  test_card_builder.py  test_cli.py  test_furigana.py  test_image.py  test_media_manager.py  test_reader.py  test_settings.py  test_transcription.py  test_translation.py
tests/test_apkg/: anime_durarara___000000097.apkg  anime_psycho_pass_000001483.apkg  anime_psycho_pass_000002932.apkg
