[project]
name = "tts-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deep-translator>=1.11.4",
    "genanki>=0.13.1",
    "gtts>=2.5.4",
    "janome>=0.5.0",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
]
